RESOLVED FIXED265930
[WebGPU] GPUTexture.createView should report useful error messages when validation fails
https://bugs.webkit.org/show_bug.cgi?id=265930
Summary [WebGPU] GPUTexture.createView should report useful error messages when valid...
Mike Wyrzykowski
Reported 2023-12-05 22:05:09 PST
[WebGPU] GPUTexture.createView should report useful error messages when validation fails
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-05 22:05:24 PST
Mike Wyrzykowski
Comment 2 2023-12-05 22:46:11 PST
EWS
Comment 3 2023-12-06 12:38:31 PST
Committed 271627@main (3cd7a4b56a4a): <https://commits.webkit.org/271627@main> Reviewed commits have been landed. Closing PR #21379 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.