[WebGPU] GPUTexture.createView should report useful error messages when validation fails https://bugs.webkit.org/show_bug.cgi?id=265930 <radar://119235084>

Reviewed by Tadeu Zagallo.

http/tests/webgpu/webgpu/api/validation/createView.html now passes locally
after not reporting validation errors on destroyed textures.

Also report some more useful error messages to enable better diagnosing of failures
when they occur.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/createView-expected.txt:
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::errorValidatingTextureViewCreation const):
(WebGPU::Texture::createView):
(WebGPU::Texture::destroy):
(WebGPU::Texture::validateCreateView const): Deleted.

Canonical link: https://commits.webkit.org/271627@main